# FTSFC

./: 0.click  2.click  Agent.cpp  Agent.h  ArrCounterMB.cc  ArrCounterMB.hh  CMakeLists.txt  CMakelists.txt  Compare.py  CounterMB.cc  CounterMB.hh  CounterMB.u.d  Efficient.hh  FTAppenderElement.cc  FTAppenderElement.hh  FTAppenderElement.u.d  FTBufferElement.cc  FTBufferElement.hh  FTBufferElement.u.d  FTClient.cc  FTClient.hh  FTControlElement.cc  FTControlElement.hh  FTControlElement.u.d  FTFastTCPGen.cc  FTFastTCPGen.hh  FTFastTCPGen.u.d  FTFilterElement.cc  FTFilterElement.hh  FTFilterElement.u.d  FTLoggerElement.cc  FTLoggerElement.hh  FTLoggerElement.u.d  FTPassElement.cc  FTPassElement.hh  FTPassElement.u.d  FTRandomDropElement.cc  FTRandomDropElement.hh  FTRandomDropElement.u.d  FTSFC-uelem.conf  (+259 more)
JumboFrames/: moongen.patch
autom4te.cache/: output.0  requests  traces.0
batch-tf/: client.hh  defs.hh  tf_lock_free_counter.cc  transmitter.hh
click-configs/: README.md  clickgen.py  defs.py  ftcgen.py  nfdefs.py  nfgen.py
conf/: aqua-intel-10Gig-nic-list  aqua-intel-nic-list  echo.click  firewall-ft.click  firewall-nf.click  firewall-tft.click  ft-1.click  ft-2.click  ft-3.click  micro-app.click  micro-nake.click  micro-state.click  monitor-ft.click  monitor-nf.click  monitor-tft.click  nat-ft.click  nat-nf.click  nat-tft.click  store.click  tft-2.click  tft-3.click  tft-4.click
dual-conf/: ft-firewall.click  ft-monitor.click  ft-nat.click  ftmb.txt  interval.click  mb-1.click  mb-3.click  mb-5.click  mb-6.click  nf-atomic-counter.click  nf-atomic-nat.click  (+7 more)
(+990 files in other folders)
